@@ -87,9 +87,20 @@ mill-speed=1000        # spindle rpm when milling
                        # Parameter values for 30deg/0.2 mm v-milling bit
 isolation-width=0.4mm  # min width between copper surfaces
 mill-feed=100 mm/min   # feed rate for [mm/m]
-zwork=-0.1mm           # milling depth
-mill-diameters=0.22mm  # diameters of mill bits
-milling-overlap=9%    # overlap milling passes, [%/mm]
+
+# Milling bit configuarations ------------------------------------------------------------------
+#
+# Hacklab milling bit ? 60deg/0.1mm
+# zwork=-0.1mm           # milling depth
+# mill-diameters=0.22mm  # diameters of mill bits
+# milling-overlap=9%     # overlap milling passes, [%/mm]
+
+# https://www.aliexpress.com/item/4000966103866.html XUCHUAN PCB
+# Engraving Bit 3.175mm Shank V Shape Carving Bits 60 Degrees Carbide
+# CNC Router Bit Tipped 0.1 mm 3D Milling Cutter
+zwork=-0.1mm            # milling depth
+mill-diameters=0.2155mm # diameters of mill bits
+milling-overlap=9%      # overlap milling passes, [%/mm]
 
 
 # Drilling options, for making holes in the PCB:
@@ -107,6 +118,6 @@ cut-feed=120 mm/min    # cutting feed
 cut-vertfeed=100mm/min # cutting feed  [mm/m]
 cut-speed=1000         # spindle rpm
 cut-infeed=1mm         # maximum cutting depth
-bridges=1.5mm          # bridge width
+bridges=1mm            # bridge width
 bridgesnum=4           # number of bridges
 # cut-side=auto        # front, back, or auto
